src/objects/Edt_Item__c.object
<CustomObject>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Tips and Notes to the editor about using this particular item</description>
        <inlineHelpText>Use this field to add Tips and Notes to the editor about using this particular item. This text will not appear on the page.</inlineHelpText>
        <label>Notes</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <inlineHelpText>Enter the text that you want to appear on the page in this field</inlineHelpText>
        <label>Text1</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text2__c</fullName>
        <label>Text2</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text3__c</fullName>
        <label>Text3</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value1__c</fullName>
        <label>Value1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <label>Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value3__c</fullName>
        <label>Value3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Editable Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cupcake_Day</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Key__c</columns>
        <columns>Text1__c</columns>
        <columns>Value1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>startsWith</operation>
            <value>cke-</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>notEqual</operation>
            <value>cke-downloads</value>
        </filters>
        <label>Cupcake Day</label>
    </listViews>
    <listViews>
        <fullName>Cupcake_Downloads</fullName>
        <columns>NAME</columns>
        <columns>Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>cke-downloads</value>
        </filters>
        <label>Cupcake Downloads</label>
    </listViews>
    <listViews>
        <fullName>Cupcake_Snapshots</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Key__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>startsWith</operation>
            <value>cke</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>contains</operation>
            <value>snapshot</value>
        </filters>
        <label>Cupcake Snapshots</label>
    </listViews>
    <listViews>
        <fullName>Dementia_Friends</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Key__c</columns>
        <columns>Text1__c</columns>
        <columns>Value1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>startsWith</operation>
            <value>df-</value>
        </filters>
        <label>Dementia Friends</label>
    </listViews>
    <nameField>
        <displayFormat>EDT{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Editable Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>